[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-epistemic-network"
version = "0.1.0"
description = "Open Epistemic Network Protocol (no blockchain) – hybrid stake+reputation epistemic infrastructure."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "SQLAlchemy==2.0.35",
    "psycopg2-binary==2.9.10",
    "alembic==1.13.3",
    "redis==5.1.0",
    "celery==5.4.0",
    "cryptography==43.0.3",
    "pyNaCl==1.5.0",
    "neo4j==5.26.0",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "hypothesis==6.112.0",
    "locust==2.32.3",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]

