[package]
name = "open-epistemic-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Open Epistemic Network Protocol"
license = "MIT"
repository = "https://github.com/Abdelrahman-sadek/Open-Epistemic-Network"
keywords = ["epistemic", "protocol", "knowledge", "network", "SDK"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
assert-json-diff = "2.0"